--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* FUENTES */
+
 @font-face{
     font-family: "MonserratFontCustom";
     src: url("fonts/Montserrat/Montserrat-Regular.ttf");
@@ -12,5 +14,125 @@
     font-family: "icons";
     src: url("fonts/web-symbols/websymbols-regular-webfont.svg#WebSymbolsRegular") format('svg'),
         url("fonts/web-symbols/websymbols-regular-webfont.eot");
-    src: url("fonts/web-symbols/websymbols-regular-webfont.eot#iefix") format("embedded-opentype");
+    src: url("fonts/web-symbols/websymbols-regular-webfont.eot#iefix") format("embedded-opentype"),
+        url("fonts/web-symbols/websymbols-regular-webfont.woff") format("woff"),
+        url("fonts/web-symbols/websymbols-regular-webfont.ttf") format("truetype");  
+    font-weight:normal;
+    font-style:normal;
 }
+
+/* GENERAL */
+
+body{
+    background-color: #FFFFFF;
+    margin: 0px auto;
+    text-decoration: none;
+    font-family: "MonserratFontCustom";
+}
+
+/* INICIO ESTILOS CONTENIDO INDEX */
+#title{
+    color: #FEFEFE;
+}
+
+
+#content{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+}
+
+
+#main-img{
+    width: 100%;
+    background-image: url("../img/adventure.jpg");
+    height: 700px;
+    background-size: 100%;
+    background-position: -100px -200px;
+    
+}
+
+.container-box-img{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+    height: 500px;
+}
+
+.img-one{
+    background-image: url("../img/boxPark.jpg");
+    width: 50%;
+    background-size: 100%;
+
+}
+.img-two{
+    background-image: url("../img/surf.jpg");
+    width: 50%;
+    background-size: 100%;
+    
+
+}
+
+.img-three{
+    background-image: url("../img/climbingcenter.jpg");
+    width: 50%;
+    background-size: 100%;
+    background-position: -3px -581px;
+
+}
+
+
+/* FIN ESTILOS CONTENIDO INDEX */
+
+ul{
+    display: flex;
+    justify-content: space-around;
+    background: #000000;
+    padding: 7px;
+    height: 70px;
+    list-style: none;
+}
+
+
+a {
+    color: #cccccc;
+  }
+
+/* Javi */
+/* Javi */
+footer{
+    background: #637d96;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    /*border: 1px solid red;*/
+  }
+  
+  /*  .footer-left {
+    border: 1px solid blue;
+  }*/
+  
+  .footer-right {
+    display: flex;
+    flex-direction: row;
+    /*border: 3px solid yellow;*/
+  }
+  /*.footer-container {
+    
+  
+  }
+  
+  /*
+  .info {
+    border: 1 solid red
+  }
+  .social {
+    border: 2px solid black
+  }
+  .location {
+    border: 1px solid red;
+  } 
+  
+  */
