--- a/css/styles.css
+++ b/css/styles.css
@@ -26,13 +26,20 @@
 body{
     background-color: #FFFFFF;
     margin: 0px auto;
+    padding: 0px;
     text-decoration: none;
     font-family: "MonserratFontCustom";
+
+}
+h2{
+    margin:0px;
 }
 
+
 /* INICIO ESTILOS CONTENIDO INDEX */
-#title{
-    color: #FEFEFE;
+
+a{
+    text-decoration: none;
 }
 
 
@@ -41,6 +48,7 @@ body{
     flex-flow: row wrap;
     justify-content: center;
     width: 100%;
+    margin:20px;
 }
 
 
@@ -49,9 +57,24 @@ body{
     background-image: url("../img/adventure.jpg");
     height: 700px;
     background-size: 100%;
-    background-position: -100px -200px;
+    background-position: -100px -500px;
+    text-align: center;
+    line-height: 700px;
+    font-size:30px;
+    text-shadow: 0 0px 15px #000;
     
 }
+
+#title{
+    color: #FEFEFE;
+    font-family: "MonserratBold";
+    transition: all 300ms;
+
+}
+#title:hover{
+    transform: scale(1.15);
+}
+
 
 .container-box-img{
     display: flex;
@@ -59,30 +82,69 @@ body{
     justify-content: center;
     width: 100%;
     height: 500px;
+    margin: 20px;
 }
 
 .img-one{
-    background-image: url("../img/boxPark.jpg");
-    width: 50%;
-    background-size: 100%;
+    background-image: url("../img/boxParkMain.jpg");
+    width: 40%;
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
 
 }
 .img-two{
-    background-image: url("../img/surf.jpg");
-    width: 50%;
-    background-size: 100%;
+    background-image: url("../img/surfmain.jpg");
+    width: 40%;
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
     
 
 }
 
 .img-three{
-    background-image: url("../img/climbingcenter.jpg");
-    width: 50%;
-    background-size: 100%;
-    background-position: -3px -581px;
+    background-image: url("../img/climbing2.jpg");
+    width: 40%;
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
+
+}
+.box{
+    position: absolute;
+    z-index: 10;
+    width:40%;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+    background-color: #FFFFFF;
+    margin-top: 30px;
+    min-height: 300px;
+    margin-left: -800px;
+    padding: 10px;
+    transition: all 300ms;
 
 }
 
+.box:hover{
+    transform: scale(1.15);
+
+}
+.img-box{
+    position: relative;
+    margin-left: 400px;
+}
+
+
+.heading-main{
+    font-family: "MonserratFontCustom";
+    color: #CBCBCB;
+    font-size: 35px;
+
+    
+}
+.heading-secondary{
+    font-family: "MonserratBold";
+    color: #000000;
+    font-size: 40px;
+
+}
 
 /* FIN ESTILOS CONTENIDO INDEX */
 
