--- a/css/boxpark.css
+++ b/css/boxpark.css
@@ -1,5 +1,29 @@
 .header-boxpark-img {
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 500px;
-    
+    background-image: url(../img/boxpark-header-img.jpeg);
+    margin: 0px;
+    text-align: left;
+    font-size: 30px;
+    line-height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0px;
+}
+.header-boxpark-title-container{
+    display: flex;
+    align-items: center;
+    height: 200px;
+    width: 70%;
+    /*border: 1px solid red;*/
+
+}
+#h1-boxpark {
+    color: white;
+}
+#h3-boxpark {
+    color: white;
 }
