--- a/css/boxpark.css
+++ b/css/boxpark.css
@@ -1,29 +1,69 @@
+/*Header*/
 .header-boxpark-img {
-    display: flex;
-    align-items: center;
     width: 100%;
     height: 500px;
     background-image: url(../img/boxpark-header-img.jpeg);
     margin: 0px;
-    text-align: left;
-    font-size: 30px;
     line-height: 700px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 0px;
-}
-.header-boxpark-title-container{
-    display: flex;
-    align-items: center;
-    height: 200px;
-    width: 70%;
-    /*border: 1px solid red;*/
+    border: 1px solid blue;
 
 }
-#h1-boxpark {
+.header-boxpark-title-container{
+    height: 500px;
+    border: 1px solid red;
+
+}
+.h1-container{
+    
+}
+.h3-container{
+    
+}
+h1 {
+    margin: 0px auto;
+    height: 200px;
+    width: 500px;
+    text-align: center;
     color: white;
+    font-size: 30px;
+
 }
 #h3-boxpark {
     color: white;
+
 }
+
+/*Text container*/
+.text-container-boxpark{
+
+}
+
+/*Articles container*/
+.articles-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    border: 4px solid red;
+    height: 700px;
+    width: 90%;
+    margin: auto;
+    padding: 20px;
+    margin-bottom: 80px
+}
+.article{
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    height: 300px;
+    width: 200px;
+    padding-right: 10px;
+    display: inline-block;
+}
+
