--- a/css/packs.css
+++ b/css/packs.css
@@ -81,7 +81,106 @@ time, mark, audio, video {
 /* CONTENIDO */
 
 
+/* ----------------ESTILOS PACK-CURSOS------------- */
+#header-pack-img{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    background-image: url("../img/skate.jpg");
+    margin: 0px;
+    justify-content: center;
+    font-size: 30px;
+    line-height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0px;
+    
+}
 
+#promo-container{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.optional-activities{
+    display: flex;
+    flex-direction: row wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: flex-end;
+
+}
+
+.main-activity{
+    font-family: "MonserratBold" ;
+    font-size: 20px;
+    color: #637D96;
+    padding: 20px;
+    border-bottom: 1px solid #637D96;
+    transition: all 300ms;
+
+    
+}
+.main-activity:hover{
+    font-size: 25px;
+    color: #000000;
+    border-bottom: 3px solid #000000;
+    
+    
+}
+
+
+.activity-type{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+#activity-description{
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: center;
+    border: 1px red solid;
+    margin-top: 30px;
+    margin-left: 30px;
+    min-height: 900px;
+}
+
+/* --------------FIN CONTENIDOS CURSOS---------------- */
+#courses-container{
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: center;
+    width: 100%;
+    height: 800px;
+    border: 1px solid red;
+}
+.course{
+    display: flex;
+    flex-flow: column wrap;
+    width: 25%;
+    height: 700px;
+    border: 1px solid blue;
+    margin: 30px;
+}
+
+.card{
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+}
+
+.card:hover{
+    transform: scale(1.15);
+
+}
+
+.textp{
+    font-family: "MonserratItalic" !important;
+}
 
 
 /* FIN ESTILOS CONTENIDO*/
