--- a/css/packs.css
+++ b/css/packs.css
@@ -102,8 +102,12 @@ time, mark, audio, video {
 #promo-container{
     display: flex;
     width: 100%;
+    flex-flow: row wrap;
     justify-content: center;
     margin-top: 40px;
+    
+    
+
 }
 
 .optional-activities{
@@ -111,19 +115,22 @@ time, mark, audio, video {
     flex-direction: row wrap;
     width: 100%;
     justify-content: center;
-    align-items: flex-end;
+    margin: 5px;
 
 }
 
 .main-activity{
-    font-family: "MonserratBold" ;
+    display: flex;
+    flex-direction: row wrap;
+    width: 20%;
+    font-family: "MonserratBold";
     font-size: 20px;
     color: #637D96;
-    padding: 20px;
+    padding: 10px;
     border-bottom: 1px solid #637D96;
     transition: all 300ms;
+    margin-bottom:30px;
 
-    
 }
 .main-activity:hover{
     font-size: 25px;
@@ -132,6 +139,26 @@ time, mark, audio, video {
     
     
 }
+.button-wrapper{
+    display: flex;
+    flex-direction: row wrap;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+    border-radius: 1px solid black;
+    padding: 5px;
+}
+    
+
+.but-course{
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+
 
 
 .activity-type{
