--- a/css/styles.css
+++ b/css/styles.css
@@ -96,27 +96,11 @@ a:hover{
     flex-flow: row wrap;
     justify-content: center;
     width: 90%;
-    margin:0px auto;
+    margin:20px auto;
     border: 1px solid red;
 }
-/*  
-.header-container{
-    width: 100%;
-    margin: 0px;
-    text-align: center;
-    height: 700px;
-    font-size:30px;
-    text-shadow: 0 0px 15px #000;
-    line-height: 700px;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 0px;
 
-}
-*/
+
 
 .header-index-img{
     display: flex;
@@ -138,7 +122,6 @@ a:hover{
 
 
 .header-text-container{
-    
     font-family: "MonserratBold";
     transition: all 300ms;
    
@@ -200,6 +183,7 @@ a:hover{
 .img-box{
     position: relative;
     margin-left: 400px;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
 }
 
 
