--- a/css/packs.css
+++ b/css/packs.css
@@ -49,7 +49,6 @@ time, mark, audio, video {
 #header{
     margin: 0px;
     width: 100%;
-    border: 1px solid red;
 
 }
 
@@ -139,25 +138,32 @@ time, mark, audio, video {
     
     
 }
+
+
 .button-wrapper{
     display: flex;
     flex-direction: row wrap;
     width: auto;
     align-items: center;
     justify-content: center;
+    background-color: #FFFFFF;
     border-radius: 15px;
-    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
-    border-radius: 1px solid black;
+    box-shadow: 1px 2px 1px 1px rgb(0 0 0 / 30%);
+    border-radius: 15px;
     padding: 5px;
 }
     
 
 .but-course{
-    margin: 10px;
     padding: 10px;
     border-radius: 15px;
+    width: 200px;
+    font-weight: bold;
+    color: #000000;
+    background-color: #FFFFFF;
+    border: none;
+    font-family:"MonserratBold";
 }
-
 
 
 
@@ -172,8 +178,6 @@ time, mark, audio, video {
     flex-flow: row wrap;
     width: 100%;
     justify-content: center;
-    border: 1px red solid;
-    margin-top: 30px;
     margin-left: 30px;
     min-height: 900px;
 }
@@ -184,16 +188,21 @@ time, mark, audio, video {
     flex-direction: row wrap;
     justify-content: center;
     width: 100%;
-    height: 800px;
-    border: 1px solid red;
+    height: auto;
+
+    padding: 10px;
 }
 .course{
     display: flex;
     flex-flow: column wrap;
-    width: 25%;
-    height: 700px;
-    border: 1px solid blue;
+    justify-content: flex-start;
+    align-items: center;
+    width: 20%;
+    height: auto;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
     margin: 30px;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .card{
@@ -207,6 +216,100 @@ time, mark, audio, video {
 
 .textp{
     font-family: "MonserratItalic" !important;
+}
+.level-course{
+    display: flex;
+    flex-direction: row wrap;
+    width: 90%;
+    height: 100px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.title-course{
+    font-family: "MonserratBold";
+    font-size: 20px;
+    width: 90%;
+    justify-content: center;
+    text-align: center;
+}
+.line-through{
+    font-family: sans-serif !important;
+    text-decoration: line-through;
+}
+.saved-course{
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 70px;
+
+    font-family: "MonserratBold";
+    
+}
+
+.saved-div{
+    background-color: blueviolet;
+    color: #FFFFFF;
+    padding: 10px;
+    border-radius: 15px;
+    margin: 5px;
+    justify-content: center;
+}
+.price-course{
+    display: flex;
+    width: 90%;
+    font-family: "MonserratBold";
+    font-size: 30px;
+    justify-content: center;
+    
+
+}
+.euros-course{
+    font-size: 50px;
+    padding: 5px;
+
+}
+.button-course{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    justify-content: center;
+
+}
+
+.but-book{
+    font-family: "MonserratBold";
+    width: 200px;
+
+}
+.list-description{
+    display: flex;
+    flex-flow: column wrap;
+
+    
+    
+}
+.description-course-wrapper{
+    margin: 10px;
+}
+.description-info{
+    padding: 10px;
+}
+.element-description{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 10px;
+    font-size: 25px;
+    font-family: "MonserratItalic";
+ 
+}
+.thumb-green{
+    color: yellowgreen;
 }
 
 
