--- a/css/packs.css
+++ b/css/packs.css
@@ -49,7 +49,6 @@ time, mark, audio, video {
 #header{
     margin: 0px;
     width: 100%;
-    border: 1px solid red;
 
 }
 
@@ -81,7 +80,237 @@ time, mark, audio, video {
 /* CONTENIDO */
 
 
+/* ----------------ESTILOS PACK-CURSOS------------- */
+#header-pack-img{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    background-image: url("../img/skate.jpg");
+    margin: 0px;
+    justify-content: center;
+    font-size: 30px;
+    line-height: 700px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 0px;
+    
+}
 
+#promo-container{
+    display: flex;
+    width: 100%;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-top: 40px;
+    
+    
+
+}
+
+.optional-activities{
+    display: flex;
+    flex-direction: row wrap;
+    width: 100%;
+    justify-content: center;
+    margin: 5px;
+
+}
+
+.main-activity{
+    display: flex;
+    flex-direction: row wrap;
+    width: 20%;
+    font-family: "MonserratBold";
+    font-size: 20px;
+    color: #637D96;
+    padding: 10px;
+    border-bottom: 1px solid #637D96;
+    transition: all 300ms;
+    margin-bottom:30px;
+
+}
+.main-activity:hover{
+    font-size: 25px;
+    color: #000000;
+    border-bottom: 3px solid #000000;
+    
+    
+}
+
+
+.button-wrapper{
+    display: flex;
+    flex-direction: row wrap;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    box-shadow: 1px 2px 1px 1px rgb(0 0 0 / 30%);
+    border-radius: 15px;
+    padding: 5px;
+}
+    
+
+.but-course{
+    padding: 10px;
+    border-radius: 15px;
+    width: 200px;
+    font-weight: bold;
+    color: #000000;
+    background-color: #FFFFFF;
+    border: none;
+    font-family:"MonserratBold";
+}
+
+
+
+.activity-type{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+#activity-description{
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: center;
+    margin-left: 30px;
+    min-height: 900px;
+}
+
+/* --------------FIN CONTENIDOS CURSOS---------------- */
+#courses-container{
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+
+    padding: 10px;
+}
+.course{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: center;
+    width: 20%;
+    height: auto;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+    margin: 30px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.card{
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
+}
+
+.card:hover{
+    transform: scale(1.15);
+
+}
+
+.textp{
+    font-family: "MonserratItalic" !important;
+}
+.level-course{
+    display: flex;
+    flex-direction: row wrap;
+    width: 90%;
+    height: 100px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.title-course{
+    font-family: "MonserratBold";
+    font-size: 20px;
+    width: 90%;
+    justify-content: center;
+    text-align: center;
+}
+.line-through{
+    font-family: sans-serif !important;
+    text-decoration: line-through;
+}
+.saved-course{
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 70px;
+
+    font-family: "MonserratBold";
+    
+}
+
+.saved-div{
+    background-color: blueviolet;
+    color: #FFFFFF;
+    padding: 10px;
+    border-radius: 15px;
+    margin: 5px;
+    justify-content: center;
+}
+.price-course{
+    display: flex;
+    width: 90%;
+    font-family: "MonserratBold";
+    font-size: 30px;
+    justify-content: center;
+    
+
+}
+.euros-course{
+    font-size: 50px;
+    padding: 5px;
+
+}
+.button-course{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    justify-content: center;
+
+}
+
+.but-book{
+    font-family: "MonserratBold";
+    width: 200px;
+
+}
+.list-description{
+    display: flex;
+    flex-flow: column wrap;
+
+    
+    
+}
+.description-course-wrapper{
+    margin: 10px;
+}
+.description-info{
+    padding: 10px;
+}
+.element-description{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 10px;
+    font-size: 25px;
+    font-family: "MonserratItalic";
+ 
+}
+.thumb-green{
+    color: yellowgreen;
+}
 
 
 /* FIN ESTILOS CONTENIDO*/
