--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,10 @@
     font-family: "MonserratBold";
     src: url("fonts/Montserrat/Montserrat-BoldItalic.ttf");
 }
-
+@font-face{
+    font-family: "MonserratItalic";
+    src: url("fonts/Montserrat/Montserrat-Italic.ttf");
+}
 @font-face{
     font-family: "icons";
     src: url("fonts/web-symbols/websymbols-regular-webfont.svg#WebSymbolsRegular") format('svg'),
@@ -19,6 +22,16 @@
         url("fonts/web-symbols/websymbols-regular-webfont.ttf") format("truetype");  
     font-weight:normal;
     font-style:normal;
+}
+
+.bold{
+    font-family: "MonserratBold";
+    font-size: 30px;
+
+}
+
+.icon-cards{
+    padding: 10px;
 }
 
 /* GENERAL */
@@ -38,52 +51,86 @@ h2 h1{
 
 /* INICIO ESTILOS CONTENIDO INDEX */
 
-a{
+#title-header{
     text-decoration: none;
+    color: #FEFEFE;
+    text-shadow: 0px 2px 2px #333;
+
+}
+#title-header:hover{
+    text-decoration: none;
+    color: #FEFEFE;
+    text-shadow: 0px 2px 2px #333;
 }
 
 
-#content{
+/*  
+a{
+    text-decoration: none;
+    color: #FEFEFE;
+    text-shadow: 0px 2px 2px #333;
+}
+a:hover{
+    text-decoration: none;
+    color: #FEFEFE;
+    text-shadow: 0px 2px 2px #333;
+}
+*/
+.btn-box{
+    background-color: #637d96;
+    color: #FFFFFF;
+    font-family: "MonserratBold";
+    transition: all 300ms;
+
+}
+.btn-box:hover{
+    background-color: #637d96;
+    color: #FFFFFF;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%) ;
+    
+
+}
+
+#content-wrapper{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 100%;
-    margin:20px;
-}
-.header-container{
-    width: 100%;
-    margin: 0px;
-    text-align: center;
-    height: 700px;
-    font-size:30px;
-    text-shadow: 0 0px 15px #000;
-    line-height: 700px;
-    width: 100%;
+    width: 90%;
+    margin:20px auto;
     
-    height: 100%;
+}
+
+
+
+.header-index-img{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+    background-image: url("../img/adventure.jpg");
+    margin: 0px;
+    justify-content: center;
+    font-size: 30px;
+    line-height: 700px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 0px;
 
-}
-
-.index-img{
-    background-image: url("../img/adventure.jpg");
 
 }
 
 
-#title{
-    color: #FEFEFE;
+.header-text-container{
     font-family: "MonserratBold";
     transition: all 300ms;
    
 
 }
 
-#title:hover{
+.header-text-container:hover{
     transform: scale(1.15);
+    color: #FEFEFE;
 }
 
 
@@ -91,9 +138,10 @@ a{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 100%;
+    width: 90%;
     height: 500px;
     margin: 20px;
+ 
 }
 .img-container{
     width: 40%;
@@ -104,7 +152,7 @@ a{
 }
 
 .img-one{
-    background-image: url("../img/boxPark.jpg");
+    background-image: url("../img/boxPark.jpg")  !important;
 }
 .img-two{
     background-image: url("../img/surf.jpg");
@@ -117,12 +165,12 @@ a{
 .box{
     position: absolute;
     z-index: 1;
-    width:40%;
+    width:30%;
     box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
     background-color: #FFFFFF;
     margin-top: 30px;
     min-height: 300px;
-    margin-left: -50%;
+    margin-left: -30%;
     padding: 2%;
     transition: all 300ms;
 
@@ -135,6 +183,7 @@ a{
 .img-box{
     position: relative;
     margin-left: 400px;
+    box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%);
 }
 
 
@@ -154,79 +203,100 @@ a{
 
 /* FIN ESTILOS CONTENIDO INDEX */
 
-/* ----------------ESTILOS PACK-CURSOS------------- */
-.pack-img{
-    background-image: url("../img/skate.jpg");
-}
 
-#promo-container{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    margin-top: 40px;
-}
-
-.optional-activities{
-    display: flex;
-    flex-direction: row wrap;
-    width: 100%;
-    justify-content: center;
-    align-items: flex-end;
-
-}
-
-.main-activity{
-    font-family: "MonserratBold" ;
-    font-size: 20px;
-    color: #637D96;
-    padding: 20px;
-    border-bottom: 1px solid #637D96;
-    transition: all 300ms;
-
-    
-}
-.main-activity:hover{
-    font-size: 25px;
-    color: #000000;
-    border-bottom: 3px solid #000000;
-    
-    
-}
-
-
-.activity-type{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-}
-
-#activity-description{
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
-    justify-content: center;
-    margin-top: 30px;
-    margin-left: 30px;
-}
-
-/* --------------FIN CONTENIDOS CURSOS---------------- */
 
 .navList{
     display: flex;
     justify-content: space-around;
-    background: #000000;
-    padding: 7px;
+    background: rgba(0, 0, 0, 0.82);
+    padding: 10px;
     height: 70px;
     list-style: none;
     align-items: center;
+    overflow: hidden;
+    margin: 0px;
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    
+}
+.navA{
+    border-radius: 15px;
+    padding: 15px;
+    font-family:"MonserratBold" ;
 }
 
+.navList > li:hover a{
+    background-color: white;
+    color: black;
+}
 #header{
     margin: 0px;
+
 }
 
 .navA {
     color: #cccccc;
     text-decoration: none;
-  }
 
+
+
+}
+
+
+/*----------------CONTACTO------------------*/
+
+.span-1-of-3 {
+    width: 32.26%;
+}
+.span-2-of-3 {
+    width: 66.13%;
+}
+.col {
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%;
+    margin-left: 0;
+}
+
+.row {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #cccccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+.parrafo {
+    text-align: center;
+    
+}
+
+#parra {
+    text-align: justify;
+    
+}
+
+#aboutContainer{
+    width: 100%;
+    border: 1px solid black;
+}
