--- a/css/packs.css
+++ b/css/packs.css
@@ -142,6 +142,7 @@ video {
     width: 100%;
     justify-content: center;
     text-align: center;
+    font-size: 25px;
 }
 .optional-activities{
     display: flex;
@@ -166,7 +167,7 @@ video {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 500px;
+  height: 1000px;
   background-image: url("../img/skate.jpg");
   margin: 0px;
   justify-content: center;
@@ -216,6 +217,7 @@ video {
   flex-direction: row;
   align-items: flex-end;
   font-family: "Rye";
+  font-size: 30px;
 }
 
 .button-wrapper {
@@ -241,6 +243,7 @@ video {
   border: none;
   font-family: "MonserratBold";
   transition: all 500ms;
+  margin: 3px;
 }
 .but-course:hover {
     
@@ -470,7 +473,7 @@ video {
 .element-description {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content:flex-start;
   margin: 10px;
   font-size: 25px;
   font-family: "MonserratItalic";
