--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ h2 h1{
 
 #title-header{
     text-decoration: none;
-    color: #FEFEFE;
+    color: #FFFFFF;
     text-shadow: 0px 2px 2px #333;
 
 }
@@ -123,7 +123,7 @@ a:hover{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 1500px;
+    height: 1300px;
     background-image: url("../img/boxPark.jpg");
     margin: 0px;
     justify-content: center;
@@ -154,7 +154,7 @@ a:hover{
     transition: all 300ms;
     width: 30%;
     justify-content: center;
-    animation: showText 10s linear;
+    animation: showText 5s linear;
    
 
 }
@@ -262,44 +262,50 @@ a:hover{
 
 /* FIN ESTILOS CONTENIDO INDEX */
 
-
-
-.navList{
+/* NAVEGADOR */
+.header-nav{
     display: flex;
-    justify-content: space-around;
-    background: rgba(0, 0, 0, 0.82);
-    padding: 10px;
-    height: 70px;
-    list-style: none;
+    width: 100%;
+    flex-flow: row wrap;
+    height: auto;
     align-items: center;
-    overflow: hidden;
-    margin: 0px;
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    background:#000000;
+    justify-content: space-between;
     
 }
-.navA{
+.nav{
+    display: flex;
+    justify-content: center;
+    width:50%;
+    font-family: "Rye";
+    
+}
+
+.img-nav{
+    height: 150px;
+    margin-left: 10px;
+
+}
+  
+  .btn-nav{
+    color:#FFFFFF;
+    background:rgba(0, 0, 0, 0.5);
+    
+    padding:10px 20px;
+    font-size:20px;
+    text-decoration:none;
+    letter-spacing:2px;
+    text-transform:uppercase;
+    margin-right: 20px;
+  }
+  
+  .btn-nav:hover{
     border-radius: 15px;
-    padding: 15px;
-    font-family:"MonserratBold" ;
-}
-
-.navList > li:hover a{
-    background-color: white;
-    color: black;
-}
-#header{
-    margin: 0px;
-
-}
-
-.navA {
-    color: #cccccc;
-    text-decoration: none;
-
-
-
-}
+    background:rgba(0, 0, 0, 0.4);
+    background:#fff;
+    padding:20px 20px; 
+    color:#1b1b1b;
+  }
 
 
 /*----------------CONTACTO------------------*/
