--- a/css/styles.css
+++ b/css/styles.css
@@ -65,11 +65,13 @@ h2 h1{
 /* INICIO ESTILOS CONTENIDO INDEX */
 
 #title-header{
+
     text-decoration: none;
+    justify-content: center;
     color: #FFFFFF;
     text-shadow: 0px 2px 2px #333;
-
 }
+
 #title-header:hover{
     text-decoration: none;
     color: #FEFEFE;
@@ -133,8 +135,6 @@ a:hover{
     background-position: center;
     background-repeat: no-repeat;
     padding: 0px;
-    
-
 
 }
 @keyframes backBanner{
@@ -148,11 +148,12 @@ a:hover{
     }
 }
 
+
 .header-text-container{
     display: flex;
     font-family: "Rye";
     transition: all 300ms;
-    width: 30%;
+    width: 100%;
     justify-content: center;
     animation: showText 5s linear;
    
@@ -193,14 +194,14 @@ a:hover{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 90%;
+    width: 100%;
     height: 500px;
     margin: 20px;
     
  
 }
 .img-container{
-    width: 40%;
+    width: 50%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -276,7 +277,7 @@ a:hover{
 .nav{
     display: flex;
     justify-content: center;
-    width:50%;
+    width:70%;
     font-family: "Rye";
     
 }
