--- a/css/about.css
+++ b/css/about.css
@@ -9,10 +9,9 @@ h2 {
   margin-top: 3em;
   color: grey;
 }
-  h2:first-child {
-    margin-top: 0;
-  }
-
+h2:first-child {
+  margin-top: 0;
+}
 
 /* Now that is interesting*/
 .underlined {
@@ -25,42 +24,39 @@ h2 {
   background-position: 0 1.2em;
   background-size: 0 100%;
   background-repeat: no-repeat;
-  transition: background .5s;
+  transition: background 0.5s;
 }
-  .underlined:hover {
-    background-size: 100% 100%;
-  }
-  .underlined--thin {
-    background-image: linear-gradient(to right, black 0, black 100%);
-  }
-  .underlined--thick {
-    background-position: 0 -0.1em;
-  }
-  .underlined--offset {
-    background-position: 0 0.2em;
-    /*didn't find another solution than mask the underline shape by a box shadow with the same color than the bg*/
-    box-shadow: inset 0 -.5em 0 0 white;
-  }
-  .underlined--gradient {
-    background-position: 0 -0.1em;
-    background-image: linear-gradient(to right, yellow 0, lightgreen 100%);
-  }
-  .underlined--reverse {
-    background-position: 100% -0.1em;
-    transition: background 1s; /*yep, that's a long link*/
-    background-image: linear-gradient(to right, yellow 0, yellow 100%);
-  }
+.underlined:hover {
+  background-size: 100% 100%;
+}
+.underlined--thin {
+  background-image: linear-gradient(to right, black 0, black 100%);
+}
+.underlined--thick {
+  background-position: 0 -0.1em;
+}
+.underlined--offset {
+  background-position: 0 0.2em;
+  /*didn't find another solution than mask the underline shape by a box shadow with the same color than the bg*/
+  box-shadow: inset 0 -0.5em 0 0 white;
+}
+.underlined--gradient {
+  background-position: 0 -0.1em;
+  background-image: linear-gradient(to right, yellow 0, lightgreen 100%);
+}
+.underlined--reverse {
+  background-position: 100% -0.1em;
+  transition: background 1s; /*yep, that's a long link*/
+  background-image: linear-gradient(to right, yellow 0, yellow 100%);
+}
 
-  .parrafo {
-    text-align: center;
-    
+.parrafo {
+  text-align: center;
 }
 
 .parrafo2 {
-    text-align: justify;
-    
+  text-align: justify;
 }
-
 
 /*.row {
     display: flex;
@@ -69,7 +65,6 @@ h2 {
     justify-content: center;
     flex-direction: column;
 }*/
-
 
 /*car
 Thanks to https://3dtransforms.desandro.com/card-flip
@@ -126,5 +121,4 @@ Thanks to https://3dtransforms.desandro.com/card-flip
         position: absolute;
         top: 10px;
         left: 10px;
-*/  
-
+*/
