--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,13 @@
     .box{
         width: 40%;
     }
+
+    .h5-pack-card{
+        font-size: 1.2em;
+    }
+  
+
+    
 }
 
 @media (max-width: 1040px) {
@@ -23,9 +30,25 @@
     .img-nav{
         height: 90px;
     }
+    .p-pack-card{
+        font-size: 11px;
+    }
+    .h5-pack-card{
+        font-size: 1.1em;
+    }
+}
+@media (max-width: 1017px) {
+   
+    .saved-course {
+        display: flex;
+        flex-flow: row wrap;
+        
+    }
+    .saved-div{
+        background:rgb(4, 221, 4);
+    }
     
 }
-
 
 @media (max-width: 971px) {
    
@@ -55,8 +78,21 @@
     .container-box-img{
         height: auto;
     }
-    
+    .img-box{
+        width: 100%;
+        margin-left: 30px;
+        margin: 2%;
+    }
+    .property-card{
+        width:30%;
+        height: 16em;
+    }
+    .p-pack-card{
+        font-size: 12px;
+    }
 }
+    
+
 
 @media (max-width: 869px) {
    
@@ -66,6 +102,95 @@
     }
     .secundary-nav{
         display: flex !important;
+    }
+    #courses-container {
+        flex-flow: column wrap;
+        width: 90%;
+        align-items: center;
+    }
+    .course{
+        width: 70%;
+        padding: 10px;
+    }
+    .description-info{
+        padding: 20px;
+    }
+    .property-card{
+        width:30%;
+    }
+    
+    .header-text-container{
+        font-size: 24px;
+
+    }
+    
+}
+
+@media (max-width: 633px) {
+    .p-pack-card{
+        font-size: 10px;
+
+    }
+    .h5-pack-card{
+        font-size: 1em;
+    }
+    .activity-type-description{
+        font-size: 20px;
+    }
+    .header-text-container{
+        font-size: 20px;
+
+    }
+}
+
+
+@media (max-width: 576px) {
+    .row{
+        width: 75%;
+
+    }
+    .property-card{
+        width:80%;
+    }
+    .p-pack-card{
+        font-size: 15px;
+
+    }
+    .h5-pack-card{
+        font-size: 1.5em;
+    }
+    .header-text-container{
+        display:none;
+
+    }
+   
+}
+@media (max-width: 512px) {
+   
+    .heading-main{
+        font-size: 30px;
+    }
+    .heading-secondary{
+        font-size: 35px;
+    }
+    .box p{
+        font-size: 15px;
+    }
+    .button-wrapper{
+        width:90%;
+    }
+}
+
+@media (max-width: 441px) {
+   
+    .heading-main{
+        font-size: 25px;
+    }
+    .heading-secondary{
+        font-size: 30px;
+    }
+    .box p{
+        font-size: 13px;
     }
 }
 
