--- a/css/contact.css
+++ b/css/contact.css
@@ -44,3 +44,9 @@ textarea {
 input[type=checkbox] {
     margin: 10px 5px 10px 0;
 }
+
+/* Small phones: from 0 to 480px */
+@media only screen and (max-width: 480px) {
+    .contact-form {width: 100%; }
+  }
+  
