--- a/css/boxpark.css
+++ b/css/boxpark.css
@@ -5,9 +5,6 @@ body ::selection {
 }
 .header-boxpark-container{
   background-image: url(../img/boxpark-header-img.jpeg);
-    width: 100%;
-    border: 1px solid black;
-    width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
@@ -69,10 +66,7 @@ body ::selection {
 /* FIRST SECTION CARDS */
 
 .first-boxpark-container{
- 
    /* border: 1px solid red;*/
-    height: 600px;
-    width: 100%;
     padding: 20px;
 }
 .first-boxpark-small {
@@ -89,6 +83,7 @@ body ::selection {
 .articles-first-container{
     display: flex;
     justify-content: space-around;
+    flex: wrap;
     margin: 0 auto;
     /*border: 1px solid yellow;*/
     width: 90%;
