--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,6 @@
 
 footer{
     /*border: 1px solid yellow;*/
-    padding: 50px;
     background-color: #000;
     color: white;
 }
@@ -15,26 +14,24 @@ footer{
 }
 
 
-
 /*Footer left*/
 .footer-left {
     box-sizing: border-box;
-    padding: 50px;
-    width: 600px;
+    width: 30%;
     /*border: 1px solid green;*/
 
 }
 /*Footer left sponsors*/
 .footer-left-sponsors {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    flex: row wrap;
+    display: block;
+
     /*border: 1px  solid red;*/
     box-sizing: border-box;
-    width: 500px;
 }
-
+.sponsors-container-footer-left{
+    display: flex;
+    justify-content: space-evenly;
+}
 #sponsor-1{
     width: 100px;
     height: 19px;
@@ -63,10 +60,10 @@ footer{
 }
 /*Footer Right*/
 .footer-right {
-    width: 50%;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    
     padding: 5px 50px;
     /*border: 1px solid red;*/
 
@@ -77,8 +74,7 @@ footer{
 }
 
 .footer-right-article{
-    border-left: 1px solid #7289DA;
-    padding-left: 10px;
+
 }
 
 #footer-links:hover{
@@ -103,7 +99,6 @@ footer{
 .footer-bottom-right {
     text-align: right;
     padding-top: 5px;
-    box-sizing: border-box;
     /*border: 1px dotted green;*/
 
 }
@@ -112,6 +107,22 @@ footer{
     padding: 5px;
     color:white;
 }
-/*@media screen and (min width: 600px){
+/*RESPONSIVE*/
+@media (max-width: 968px) {
+    .footer-container{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .footer-right{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-left-sponsors {
+        display: none;
+    }
 
-}*/
+    .footer-right-article{
+    }
+
+}
