--- a/css/about.css
+++ b/css/about.css
@@ -40,10 +40,10 @@ h2:first-child {
   /*didn't find another solution than mask the underline shape by a box shadow with the same color than the bg*/
   box-shadow: inset 0 -0.5em 0 0 white;
 }
-.underlined--gradient {
+/*.underlined--gradient {
   background-position: 0 -0.1em;
   background-image: linear-gradient(to right, yellow 0, lightgreen 100%);
-}
+}*/
 .underlined--reverse {
   background-position: 100% -0.1em;
   transition: background 1s; /*yep, that's a long link*/
