--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
     font-family: "MonserratFontCustom";
     src: url("fonts/Montserrat/Montserrat-Regular.ttf");
 }
+@font-face{
+    font-family: "Bungee";
+    src: url("fonts/Bungee/Bungee-Regular.ttf");
+}
 
 @font-face{
     font-family: "MonserratBold";
@@ -64,7 +68,7 @@ h2 h1{
 
 /* INICIO ESTILOS CONTENIDO INDEX */
 
-#title-header{
+.title-header{
 
     text-decoration: none;
     justify-content: center;
@@ -154,7 +158,7 @@ a:hover{
 
 .header-text-container{
     display: flex;
-    font-family: "Rye";
+    font-family: "Bungee";
     transition: all 300ms;
     width: 100%;
     justify-content: center;
@@ -257,7 +261,7 @@ a:hover{
     
 }
 .heading-secondary{
-    font-family: "MonserratBold";
+    font-family: "Bungee";
     color: #000000;
     font-size: 40px;
 
@@ -281,7 +285,7 @@ a:hover{
     display: flex;
     justify-content: center;
     width:70%;
-    font-family: "Rye";
+    font-family: "Bungee";
     
 }
 .nav-logo{
