responsive finished in boxpark.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ a:hover{
 }
 .nav{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     width:70%;
     font-family: "Bungee";
     
