--- a/css/packs.css
+++ b/css/packs.css
@@ -123,7 +123,16 @@ video {
   margin: 10px;
   justify-content: center;
 }
-
+.activity-type {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  font-family: "Bungee";
+  font-size: 30px;
+} 
+.stripe-log > i{
+  font-family: 30px;
+}
 .activity-type-description{
     font-family: "PermanentMaker" !important;
     width: 100%;
@@ -139,6 +148,7 @@ video {
 }
 .logo-act {
   padding-right: 10px;
+  padding-top: 25px;
 }
 
 
@@ -172,6 +182,7 @@ video {
 #title-services-container > a{
   color: #ffffff;
   text-decoration: none;
+  text-shadow: 0px 3px 3px #333;
 }
 .optional-activities {
   display: flex;
@@ -198,13 +209,7 @@ video {
   color: #000000 !important;
   border-bottom: 3px solid #000000 !important;
 }
-.activity-type {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  font-family: "Rye";
-  font-size: 30px;
-}
+
 
 .button-wrapper {
   display: flex;
