--- a/css/styles.css
+++ b/css/styles.css
@@ -73,14 +73,14 @@ h2 h1{
     text-decoration: none;
     justify-content: center;
     color: black;
-    text-shadow: 0px 2px 2px #333;
+    text-shadow: 0px 3px 3px #333;
     margin-bottom: 15%;
 }
 
 #title-header:hover{
     text-decoration: none;
     color: #FEFEFE;
-    text-shadow: 0px 2px 2px #333;
+    text-shadow: 0px 3px 3px #333;
 }
 
 
@@ -97,15 +97,18 @@ a:hover{
 }
 */
 .btn-box{
-    background-color: #637d96;
-    color: #FFFFFF;
-    font-family: "MonserratBold";
+    background-color: #7289DA;
+    border: 2px solid #FFFFFF;
+    border-radius: 15px;
+    color: #000;
+    font-family: "Bungee";
     transition: all 300ms;
 
 }
 .btn-box:hover{
-    background-color: #637d96;
-    color: #FFFFFF;
+    background-color: black;
+    color:white;
+    border: 2px solid black;;
     box-shadow: 0px 2px 18px 0px rgb(0 0 0 / 30%) ;
     
 
