--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ a:hover{
 
 }
 
-#content-wrapper{
+.content-wrapper{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
